--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -16,7 +16,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 integer-sqrt = { version = "0.1.2" }
 serde = { version = "1.0.102", features = ["derive"], optional = true }
-simple-json = { version = '0.1.3', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
+#simple-json = { version = '0.1.3', git = "https://github.com/jingleizhang/simple-json.git", default-features = false }
 hex = { version = "0.4.0", default-features = false }
 num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
@@ -125,7 +125,7 @@ std = [
 	"sp-std/std",
 	"serde/std",
 	"pallet-session/std",
-	"simple-json/std",
+	#"simple-json/std",
 	"sp-api/std",
 	"sp-runtime/std",
 	"sp-staking/std",
